// Copyright 2020 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

// This proto file describes bot task.

syntax = "proto3";

package bot;
option go_package = "go.chromium.org/luci/swarming/proto/bot;botpb";

import "swarming.proto";

// TaskDetails describes task run options for swarmbot runtask command.
// go/src/go.chromium.org/luci/swarming/cmd/swarmbot/runtask.go
message TaskDetails {
  swarming.v1.TaskProperties task_properties = 1;
}
